fixed spacing on the site news box

--- a/mod-picker/app/assets/stylesheets/pages/landing.scss
+++ b/mod-picker/app/assets/stylesheets/pages/landing.scss
@@ -65,6 +65,7 @@
 	.news-box {
     padding-left: 10px;
     font-size: 14px;
+    margin: 20px 20px 0 20px;
     border-bottom: 1px solid $border_color;
 
   	.section-title {
@@ -86,6 +87,7 @@
 
   .load-older-posts {
     text-align: center;
+    padding: 10px;
   }
 }
 
